# QtDemo

./: CMakeLists.txt  QtDemo  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
